--- a/srcs/.env
+++ b/srcs/.env
@@ -5,7 +5,7 @@ MARIADB_USER=jihyeole
 MARIADB_PASSWORD=1234
 MARIADB_HOSTNAME=mariadb
 
-WORDPRESS_URL=https://127.0.0.1
+WORDPRESS_URL=https://jihyeole.42.fr
 WORDPRESS_TITLE=Jihyole
 WORDPRESS_ADMIN=jihyeole
 WORDPRESS_ADMIN_PASSWORD=1234
